[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "climada_petals"
version = "6.1.0"
description = "CLIMADA Extensions"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
    { name = "ETH", email = "climada-info@sympa.ethz.ch" }
]
keywords = ["climate", "adaptation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "boario",
    "climada>=6.1",
    "cdsapi",
    "osm-flex",
    "pymrio",
    "rioxarray",
    "ruamel.yaml",
    "scikit-image",
    "xesmf"
]

[project.urls]
Homepage = "https://github.com/CLIMADA-project/climada_petals"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["climada_petals*"]
